api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-api
  namespace: blog-api
spec:
  selector:
    matchLabels:
      app: blog-api
  template:
    metadata:
      labels:
        app: blog-api
    spec:
      containers:
        - name: blog-api
          image: ghcr.io/narumir/blog-api:0.0.3
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
            - containerPort: 4000
