api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api
  namespace: blog-api
spec:
  selector:
    app: blog-api
  ports:
  - port: 80
    targetPort: 4000
