api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api
  namespace: blog-api
  labels:
    name: blog-api
spec:
  ingressClassName: nginx
  rules:
    - host: api.narumir.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blog-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.narumir.io
      secret: letsencrypt
